--- a/index copy 2.html
+++ b/index copy 2.html
@@ -13,7 +13,7 @@
       <p>This is a basic HTML template.</p>
     </main>
     <footer>
-      <p>&copy; 2023 Sample Page</p>
+      <p>21111023 Sample Pageqqqqq111111111</p>
     </footer>
   </body>
 </html>
