--- a/index copy 2.html
+++ b/index copy 2.html
@@ -13,8 +13,5 @@
       <p>This is a basic HTML template.</p>
     </main>
     <footer>
-      <p>21111023 Sample Pageqqqqq111111111</p>
-    </footer>
-  </body>
-</html>
-  
+      <p>21111023 Sample sdasdasdasd Page</p>
+      
