Add creator credit and sync config

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
             </div>
 
             <button id="generateBtn" class="glow-on-hover">번호 생성하기</button>
+            <div class="credit" style="margin-top: 2rem; color: #94a3b8; font-size: 0.9rem;">
+                만든사람: 조경훈
+            </div>
         </main>
     </div>
 
