Fix: Restore missing Generate button and improve layout

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,13 @@
                 <div class="placeholder-text">버튼을 눌러 행운을 잡으세요!</div>
             </div>
 
-            <div class="credit" style="margin-top: 2rem; color: #94a3b8; font-size: 0.9rem;">
-                만든사람: 조경훈
-            </div>
-            
-            <div style="margin-top: 2rem;">
+            <button id="generateBtn" class="glow-on-hover">번호 생성하기</button>
+
+            <div class="control-group" style="margin-top: 2rem; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
+                <div class="credit" style="color: #94a3b8; font-size: 0.9rem;">
+                    만든사람: 조경훈
+                </div>
+                
                 <button id="playStoryBtn" class="glow-on-hover" style="background: linear-gradient(135deg, #10b981, #3b82f6); font-size: 1rem; padding: 0.8rem 2rem;">
                     🐯 옛날 이야기 듣기
                 </button>
