Add siba video feature

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,15 @@
                 </button>
             </div>
             <audio id="storyAudio" src="story.mp3"></audio>
+
+            <div style="margin-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 2rem; width: 100%;">
+                <button id="playSibaBtn" class="glow-on-hover" style="background: linear-gradient(135deg, #f59e0b, #d97706); font-size: 1rem; padding: 0.8rem 2rem;">
+                    🐕 시바견 영상 보기
+                </button>
+                <div id="videoContainer" style="display: none; margin-top: 1.5rem;">
+                    <video id="sibaVideo" src="siba.mp4" controls style="width: 100%; max-width: 400px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.3);"></video>
+                </div>
+            </div>
         </main>
     </div>
 
